# dpvo-clean

./: .gitignore  Dockerfile  README.md  demo.py  pyproject.toml  setup.py  train.py
config/: default.yaml  fast.yaml  superfast.yaml
config/eval/: euroc.yaml  m3ed.yaml
dpvo/: dpvo.py
eval/: evaluate_aedat_ev.py  evaluate_bag.py  evaluate_euroc.py  evaluate_icl_nuim.py  evaluate_kitti.py  evaluate_m3ed.py  evaluate_m3ed_eiv.py  evaluate_m3ed_ev.py  evaluate_m3ed_evh.py  evaluate_m3ed_i.py  evaluate_tartan.py  evaluate_tum.py  evaluate_tumvi.py  evaluate_video.py
src/dpvo/: ba.py  bag.py  blocks.py  config.py  deio.py  devo.py  dpvo.py  dvio.py  event.py  extractor.py  logger.py  multi_sensor.py  net.py  parallel.py  patchgraph.py  plot_utils.py  projective_ops.py  se3.py  selector.py  stream.py  utils.py  voxel_utils.py
src/dpvo/altcorr/: __init__.py
src/dpvo/data_readers/: augmentation.py  base.py  factory.py  frame_utils.py  projective_ops.py  rgbd_utils.py  tartan.py
src/dpvo/eval/dataset/: __init__.py  abc.py  m3ed.py
src/dpvo/fastba/: __init__.py  ba.cpp  ba.py  ba_cuda.cu
src/dpvo/geo/: __init__.py
src/dpvo/lietorch/: __init__.py  broadcasting.py  gradcheck.py  group_ops.py  groups.py  run_tests.py
src/dpvo/loop_closure/: long_term.py  optim_utils.py
src/dpvo/loop_closure/retrieval/: __init__.py  image_cache.py  retrieval_dbow.py
test/: test.py  trt_bench.py
