[project]
name = "dpvo-clean"
version = "0.1.0"
description = "DPVO/DPV-SLAM clean"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "evo>=1.31.0",
    "kornia>=0.8.0",
    "numba>=0.61.0",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "plyfile>=1.1",
    "pypose>=0.7.2",
    "tensorboard>=2.19.0",
    "torch==2.3.1",
    "torch-scatter==2.1.2",
    "torchvision==0.18.1",
    "tqdm>=4.67.1",
    "yacs>=0.1.8",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=60", "setuptools-scm>=8.0", "torch==2.3.1"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.data-files]
"data" = ["**/*.cuh", "**/*.cu", "**/*.h"]
