[project]
name = "dpvo-clean"
version = "0.1.0"
description = "DPVO/DPV-SLAM clean"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "evo>=1.31.0",
    "numba>=0.61.0",
    "numpy>=2.0.0",
    "opencv-python>=4.11.0",
    "plyfile>=1.0",
    "pypose>=0.7.0",
    "tensorboard>=2.0.0",
    "torch>=2.7.0",
    "torch-scatter>=2.1.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.0",
    "yacs>=0.1.8",
    "h5py>=3.0.0",
    "hdf5plugin",
    "cairocffi"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=60", "setuptools-scm>=8.0", "torch>=2.7.0"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.data-files]
"data" = ["**/*.cuh", "**/*.cu", "**/*.h"]

[tool.setuptools.packages.find]
where = ["src"]